--- a/epics-base/meta.yaml
+++ b/epics-base/meta.yaml
@@ -7,7 +7,7 @@ source:
     fn: baseR3.14.12.4.tar.gz
     url: http://www.aps.anl.gov/epics/download/base/baseR3.14.12.4.tar.gz
     patches:
-        - config_site.diff
+        #- config_site.diff
         - config_common.diff
 
 build:
