--- a/epics-base/meta.yaml
+++ b/epics-base/meta.yaml
@@ -7,15 +7,16 @@ source:
     fn: baseR3.14.12.4.tar.gz
     url: http://www.aps.anl.gov/epics/download/base/baseR3.14.12.4.tar.gz
     patches:
-        - config_site.diff
-        - config_common.diff
+        - config_site.diff [not win]
+        - config_common.diff [not win]
 
 build:
   number: 0
 
 requirements:
   build:
-#    - perl
+    - m2w64-make [win]
+    - perl [win]
     - readline [linux]
 
   run:
