--- a/zeromq/meta.yaml
+++ b/zeromq/meta.yaml
@@ -16,6 +16,10 @@ build:
 
 requirements:
   build:
+    - autoconf [not win]
+    - automake [not win]
+    - pkg-config [not win]
+    - libtool [not win]
     - libsodium [not win]
 
   run:
