--- a/.travis.yml
+++ b/.travis.yml
@@ -39,6 +39,7 @@ install:
   - '[[ "$TRAVIS_OS_NAME" != "linux" ]] || conda build -c $CONDA_CHANNEL --skip-existing readline'
   - conda build -c $CONDA_CHANNEL --skip-existing epics-base
   - conda build -c $CONDA_CHANNEL --skip-existing pyepics
+  - conda build -c $CONDA_CHANNEL --skip-existing h5py
   - '[[ "$TRAVIS_OS_NAME" != "linux" ]] || conda build -c $CONDA_CHANNEL --skip-existing zeromq'
   - '[[ "$TRAVIS_OS_NAME" != "linux" ]] || conda build -c $CONDA_CHANNEL --skip-existing cx_oracle'
 
