--- a/.travis.yml
+++ b/.travis.yml
@@ -40,6 +40,7 @@ install:
   - conda build -c $CONDA_CHANNEL --skip-existing epics-base
   - conda build -c $CONDA_CHANNEL --skip-existing pyepics
   - conda build -c $CONDA_CHANNEL --skip-existing h5py
+  - conda build -c $CONDA_CHANNEL --skip-existing lzf
   - '[[ "$TRAVIS_OS_NAME" != "linux" ]] || conda build -c $CONDA_CHANNEL --skip-existing zeromq'
   - '[[ "$TRAVIS_OS_NAME" != "linux" ]] || conda build -c $CONDA_CHANNEL --skip-existing cx_oracle'
 
