add recipe for bottle

--- a/.travis.yml
+++ b/.travis.yml
@@ -41,6 +41,7 @@ install:
   - conda build -c $CONDA_CHANNEL --skip-existing pyepics
   - conda build -c $CONDA_CHANNEL --skip-existing h5py
   - conda build -c $CONDA_CHANNEL --skip-existing lzf
+  - conda build -c $CONDA_CHANNEL --skip-existing bottle
   - '[[ "$TRAVIS_OS_NAME" != "linux" ]] || conda build -c $CONDA_CHANNEL --skip-existing zeromq'
   - '[[ "$TRAVIS_OS_NAME" != "linux" ]] || conda build -c $CONDA_CHANNEL --skip-existing cx_oracle'
 
