--- a/.travis.yml
+++ b/.travis.yml
@@ -33,6 +33,7 @@ install:
   - hash -r
   - conda config --set always_yes yes --set changeps1 no
   - conda update -q --all
+  - conda config --add channels defaults
   - conda install conda-build numpy anaconda-client
   # build
   - conda build -c $CONDA_CHANNEL --skip-existing brotli
