--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,10 @@ language: cpp
 matrix:
   include:
     - os: linux
+      dist: trusty
       env: CONDA_PY=2.7
     - os: linux
+      dist: trusty
       env: CONDA_PY=3.5
     - os: osx
       env: CONDA_PY=2.7
