--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,15 @@ matrix:
     - os: linux
       dist: trusty
       env: CONDA_PY=3.5
+    - os: linux
+      dist: trusty
+      env: CONDA_PY=3.6
     - os: osx
       env: CONDA_PY=2.7
     - os: osx
       env: CONDA_PY=3.5
+    - os: osx
+      env: CONDA_PY=3.6
 
 install:
   # Expand CONDA_CMD alias
@@ -57,4 +62,3 @@ install:
 
 script:
   - echo "No test scripts to be run!"
-
