fix bitshuffle build
do not use openmp for linux builds
add python as runtime requirement

--- a/bitshuffle/meta.yaml
+++ b/bitshuffle/meta.yaml
@@ -20,6 +20,7 @@ requirements:
         - h5py >=2.7.*
         - hdf5 ==1.8.17
     run:
+        - python 
         - numpy
         - h5py
         - cython
