--- a/h5py/meta.yaml
+++ b/h5py/meta.yaml
@@ -7,6 +7,9 @@ source:
     git_rev: master
     git_url: https://github.com/h5py/h5py.git
 
+build:
+    number: 1
+
 requirements:
   build:
     - python
