--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -40,6 +40,7 @@ install:
   - "%CMD_IN_ENV% conda build -c %CONDA_CHANNEL% --skip-existing bottle"
   - "%CMD_IN_ENV% conda build -c %CONDA_CHANNEL% --skip-existing epics-base"
   - "%CMD_IN_ENV% conda build -c %CONDA_CHANNEL% --skip-existing pyepics"
+  - "%CMD_IN_ENV% conda build -c %CONDA_CHANNEL% --skip-existing xrayutilities"
 
 on_success:
   - if defined CONDA_TOKEN (anaconda -t %CONDA_TOKEN% upload %MINICONDA%\\conda-bld\\win-%PYTHON_ARCH%\\*.tar.bz2)
