use variant config file to build for multiple python version
This requires conda-build 3.0
https://conda.io/docs/user-guide/tasks/build-packages/variants.html

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,21 +9,11 @@ matrix:
   include:
     - os: linux
       dist: trusty
-      env: CONDA_PY=2.7
-    - os: linux
-      dist: trusty
-      env: CONDA_PY=3.5
-    - os: linux
-      dist: trusty
-      env: CONDA_PY=3.6
     - os: osx
-      env: CONDA_PY=2.7
-    - os: osx
-      env: CONDA_PY=3.5
-    - os: osx
-      env: CONDA_PY=3.6
 
 install:
+  # Variant config file
+  - cp conda_build_config.yaml $HOME
   # Expand CONDA_CMD alias
   - shopt -s expand_aliases
   # Set the anaconda environment
