patch complains CRLF ending

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,3 +1,6 @@
+init:
+  - git config --global core.autocrlf false
+
 environment:
   global:
     # SDK v7.0 MSVC Express 2008's SetEnv.cmd script will fail if the
