patch requires CRLF line ending on Windows?

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -1,5 +1,5 @@
 init:
-  - git config --global core.autocrlf false
+  - git config --global core.autocrlf true
 
 environment:
   global:
@@ -24,10 +24,6 @@ install:
   - conda update -q --all
   - conda config --add channels defaults
   - conda install conda-build numpy anaconda-client
-  # replace patch with m2-patch
-  # https://github.com/conda/conda-build/issues/2307
-  - conda remove patch
-  - conda install m2-patch
   # build
   - "%CMD_IN_ENV% conda build -c %CONDA_CHANNEL% --skip-existing brotli"
   - "%CMD_IN_ENV% conda build -c %CONDA_CHANNEL% --skip-existing bottle"
