--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -29,6 +29,7 @@ install:
   - "%CMD_IN_ENV% conda build -c %CONDA_CHANNEL% --skip-existing bottle"
   - "%CMD_IN_ENV% conda build -c %CONDA_CHANNEL% -c conda-forge --skip-existing epics-base"
   - "%CMD_IN_ENV% conda build -c %CONDA_CHANNEL% --skip-existing pyepics"
+  - "%CMD_IN_ENV% conda build -c %CONDA_CHANNEL% --skip-existing tinydb"
 
 on_success:
   - if defined CONDA_TOKEN (anaconda -t %CONDA_TOKEN% upload %MINICONDA%\\conda-bld\\win-%PYTHON_ARCH%\\*.tar.bz2)
