debug pyepics failure

--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -24,10 +24,12 @@ install:
   - conda update -q --all
   - conda config --add channels defaults
   - conda install conda-build numpy anaconda-client
+  - conda info
   # build
   - "%CMD_IN_ENV% conda build -c %CONDA_CHANNEL% --skip-existing brotli"
   - "%CMD_IN_ENV% conda build -c %CONDA_CHANNEL% --skip-existing bottle"
   - "%CMD_IN_ENV% conda build -c %CONDA_CHANNEL% -c conda-forge --skip-existing epics-base"
+  - conda search pyparsing
   - "%CMD_IN_ENV% conda build -c %CONDA_CHANNEL% --skip-existing pyepics"
   - "%CMD_IN_ENV% conda build -c %CONDA_CHANNEL% --skip-existing tinydb"
 
