--- a/epics-base/meta.yaml
+++ b/epics-base/meta.yaml
@@ -1,27 +1,29 @@
+{% set version = "3.14.12.7" %}
 
 package:
     name: epics-base
-    version: "3.14.12.6"
+    version: {{ version }}
 
 source:
-    fn: baseR3.14.12.6.tar.gz
-    url: http://www.aps.anl.gov/epics/download/base/baseR3.14.12.6.tar.gz
+    fn: baseR{{version}}.tar.gz
+    url: http://www.aps.anl.gov/epics/download/base/baseR{{version}}.tar.gz
     patches:
-        - config_site.diff [not win]
-        - config_common.diff [not win]
-        - config_readline.diff [linux]
-        - bind-returns-eacces.patch
-        - pcas-read-gdd.patch
+        - config_site.diff # [not win]
+        - config_common.diff # [not win]
+        - config_readline.diff # [linux]
 
 build:
-  number: 3
+  number: 1
+  features:
+    - vc9  # [win and py27]
+    - vc14 # [win and (py35 or py36)]
 
 requirements:
   build:
-    - {{ compiler('cxx') }}
-    - m2w64-make [win]
-    - perl [win]
-    - patch [win]
+    - python # [win]
+    - m2w64-make # [win]
+    - perl # [win]
+    - patch # [win]
 
 about:
     home: http://www.aps.anl.gov/epics
