optimise download footprint

--- a/.travis.yml
+++ b/.travis.yml
@@ -39,6 +39,8 @@ install:
     fi
   - CONDA_CMD config --add channels defaults
   - CONDA_CMD update -q --all
+  # avoid downloading MKL of huge size
+  - CONDA_CMD install nomkl
   - CONDA_CMD install conda-build numpy anaconda-client
   # build
   - CONDA_CMD build -c $CONDA_CHANNEL --token $CONDA_TOKEN --skip-existing brotli
