--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -31,6 +31,7 @@ install:
   - "%CMD_IN_ENV% conda build -c %CONDA_CHANNEL% --skip-existing epics-base"
   - "%CMD_IN_ENV% conda build -c %CONDA_CHANNEL% --skip-existing pyepics"
   - "%CMD_IN_ENV% conda build -c %CONDA_CHANNEL% --skip-existing tinydb"
+  - "%CMD_IN_ENV% conda build -c %CONDA_CHANNEL% --skip-existing xrt"
 
 on_success:
   - if defined CONDA_TOKEN (anaconda -t %CONDA_TOKEN% upload %MINICONDA%\\conda-bld\\win-%PYTHON_ARCH%\\*.tar.bz2)
