install binaraies/libraries with write permission
otherwise the install_name_tool on macOS got upset.

--- a/epics-base/meta.yaml
+++ b/epics-base/meta.yaml
@@ -10,6 +10,7 @@ source:
     patches:
         - config_site.diff # [not win]
         - config_common.diff # [not win]
+        - rules_build.diff
         - config_readline.diff # [linux]
 
 build:
