--- a/bitshuffle/meta.yaml
+++ b/bitshuffle/meta.yaml
@@ -2,9 +2,10 @@ package:
     name: bitshuffle
     version: 0.2.4.1
 source:
-    git_url: https://github.com/kiyo-masui/bitshuffle.git
-    git_rev: 0.2.4
-    # path: ..
+    - git_url: https://github.com/kiyo-masui/bitshuffle.git
+      git_rev: 0.2.4
+    - path .
+
     patches:
       - setup.py.patch
 
