--- a/bitshuffle/meta.yaml
+++ b/bitshuffle/meta.yaml
@@ -3,7 +3,7 @@ package:
     version: 0.2.4.1
 source:
     - git_url: https://github.com/kiyo-masui/bitshuffle.git
-      git_rev: 0.2.4
+    - git_rev: 0.2.4
     - path .
 
     patches:
