--- a/bitshuffle/meta.yaml
+++ b/bitshuffle/meta.yaml
@@ -4,7 +4,7 @@ package:
 source:
     - git_url: https://github.com/kiyo-masui/bitshuffle.git
     - git_rev: 0.2.4
-    - path .
+    - path: .
 
     patches:
       - setup.py.patch
