--- a/bitshuffle/meta.yaml
+++ b/bitshuffle/meta.yaml
@@ -9,7 +9,7 @@ source:
       - setup.py.patch
 
 build:
-    number: 2
+    number: 0
 
 requirements:
     build:
@@ -17,8 +17,8 @@ requirements:
         - setuptools
         - cython
         - numpy
-        - h5py >=2.7.*
-        - hdf5 ==1.8.20
+        - h5py
+        - hdf5
     run:
         - python 
         - numpy
