--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -21,6 +21,9 @@ environment:
     - PYTHON_VERSION: 3.6
       PYTHON_ARCH: "64"
       MINICONDA: C:\Miniconda3-x64
+    - PYTHON_VERSION: 3.7
+      PYTHON_ARCH: "64"
+      MINICONDA: C:\Miniconda3-x64
 
 build: false
 
