--- a/bottle/meta.yaml
+++ b/bottle/meta.yaml
@@ -1,54 +1,34 @@
+{% set name = "bottle" %}
+{% set version = "0.12.17" %}
+{% set hash_type = "sha256" %}
+{% set hash_value = "e9eaa412a60cc3d42ceb42f58d15864d9ed1b92e9d630b8130c871c5bb16107c" %}
+
 package:
-  name: bottle
-  version: "0.12.13"
+  name: '{{ name|lower }}'
+  version: '{{ version }}'
 
 source:
-  fn: bottle-0.12.13.tar.gz
-  url: https://pypi.python.org/packages/bd/99/04dc59ced52a8261ee0f965a8968717a255ea84a36013e527944dbf3468c/bottle-0.12.13.tar.gz
-  md5: d2fe1b48c1d49217e78bf326b1cad437
-#  patches:
-   # List any patch files here
-   # - fix.patch
+  fn: '{{ name }}-{{ version }}.tar.gz'
+  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
+  '{{ hash_type }}': '{{ hash_value }}'
 
-# build:
-  # noarch_python: True
-  # preserve_egg_dir: True
-  # entry_points:
-    # Put any entry points (scripts to be generated automatically) here. The
-    # syntax is module:function.  For example
-    #
-    # - bottle = bottle:main
-    #
-    # Would create an entry point called bottle that calls bottle.main()
-
-
-  # If this is a new build for the same version, increment the build
-  # number. If you do not include this key, it defaults to 0.
-  # number: 1
+build:
+  noarch: python
+  number: 0
+  script: python -m pip install --no-deps --ignore-installed .
 
 requirements:
   build:
     - python
     - setuptools
+    - pip
 
   run:
     - python
 
-# test:
-  # Python imports
-  # imports:
-
-  # commands:
-    # You can put test commands to be run here.  Use this to test that the
-    # entry points work.
-
-
-  # You can also put a file called run_test.py in the recipe that will be run
-  # at test time.
-
-  # requires:
-    # Put any additional test requirements here.  For example
-    # - nose
+test:
+  imports:
+    - bottle
 
 about:
   home: http://bottlepy.org/
