--- a/xrt/meta.yaml
+++ b/xrt/meta.yaml
@@ -1,8 +1,8 @@
 {% set name = "xrt" %}
-{% set version = "1.3.0beta" %}
+{% set version = "1.3.3" %}
 {% set file_ext = "zip" %}
 {% set hash_type = "sha256" %}
-{% set hash_value = "476071ce62cc4eed189e374417e89d882a7d4105f42fd397c9cdae8d727226cf" %}
+{% set hash_value = "1360ca34a20aa8a1ee9b8bcdf9f4539f06955d1d0c535a539887143b102a4e39" %}
 
 package:
   name: '{{ name|lower }}'
@@ -14,12 +14,15 @@ source:
   '{{ hash_type }}': '{{ hash_value }}'
 
 build:
+  noarch: python
   number: 0
-  script: 'python setup.py install '
+  script: python -m pip install --no-deps --ignore-installed .
 
 requirements:
   build:
     - python
+    - setuptools
+
   run:
     - python
     - numpy
