--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -36,11 +36,11 @@ install:
   - conda info
   # build
   #- "%CMD_IN_ENV% conda build -c %CONDA_CHANNEL% --skip-existing brotli"
-  - "%CMD_IN_ENV% conda build -c %CONDA_CHANNEL% --skip-existing bottle"
+  #- "%CMD_IN_ENV% conda build -c %CONDA_CHANNEL% --skip-existing bottle"
   - "%CMD_IN_ENV% conda build -c %CONDA_CHANNEL% --skip-existing epics-base"
   - "%CMD_IN_ENV% conda build -c %CONDA_CHANNEL% --skip-existing pyepics"
-  - "%CMD_IN_ENV% conda build -c %CONDA_CHANNEL% --skip-existing tinydb"
-  - "%CMD_IN_ENV% conda build -c %CONDA_CHANNEL% --skip-existing xrt"
+  #- "%CMD_IN_ENV% conda build -c %CONDA_CHANNEL% --skip-existing tinydb"
+  #- "%CMD_IN_ENV% conda build -c %CONDA_CHANNEL% --skip-existing xrt"
   - "%CMD_IN_ENV% conda build -c %CONDA_CHANNEL% --skip-existing bitshuffle"
 
 on_success:
