--- a/.appveyor.yml
+++ b/.appveyor.yml
@@ -26,13 +26,13 @@ install:
   - conda install conda-build numpy anaconda-client
   - conda info
   # build
-  #- "%CMD_IN_ENV% conda build -c %CONDA_CHANNEL% --skip-existing brotli"
-  #- "%CMD_IN_ENV% conda build -c %CONDA_CHANNEL% --skip-existing bottle"
-  - "%CMD_IN_ENV% conda build -c %CONDA_CHANNEL% --skip-existing epics-base"
-  - "%CMD_IN_ENV% conda build -c %CONDA_CHANNEL% --skip-existing pyepics"
-  #- "%CMD_IN_ENV% conda build -c %CONDA_CHANNEL% --skip-existing tinydb"
-  #- "%CMD_IN_ENV% conda build -c %CONDA_CHANNEL% --skip-existing xrt"
-  - "%CMD_IN_ENV% conda build -c %CONDA_CHANNEL% --skip-existing bitshuffle"
+  #- "%CMD_IN_ENV% conda build -c %MY_CONDA_CHANNEL% --skip-existing brotli"
+  #- "%CMD_IN_ENV% conda build -c %MY_CONDA_CHANNEL% --skip-existing bottle"
+  - "%CMD_IN_ENV% conda build -c %MY_CONDA_CHANNEL% --skip-existing epics-base"
+  - "%CMD_IN_ENV% conda build -c %MY_CONDA_CHANNEL% --skip-existing pyepics"
+  #- "%CMD_IN_ENV% conda build -c %MY_CONDA_CHANNEL% --skip-existing tinydb"
+  #- "%CMD_IN_ENV% conda build -c %MY_CONDA_CHANNEL% --skip-existing xrt"
+  - "%CMD_IN_ENV% conda build -c %MY_CONDA_CHANNEL% --skip-existing bitshuffle"
 
 on_success:
   - if defined CONDA_TOKEN (anaconda -t %CONDA_TOKEN% upload %MINICONDA%\\conda-bld\\win-%PYTHON_ARCH%\\*.tar.bz2)
