--- a/tinydb/meta.yaml
+++ b/tinydb/meta.yaml
@@ -15,12 +15,14 @@ source:
 build:
   noarch: python
   number: 0
-  script: python setup.py install  --single-version-externally-managed --record=record.txt
+  script: python -m pip install --no-deps --ignore-installed .
 
 requirements:
   build:
     - python
     - setuptools
+    - pip
+
   run:
     - python
 
