--- a/conda_build_config.yaml
+++ b/conda_build_config.yaml
@@ -3,3 +3,17 @@ python:
     - 3.5
     - 3.6
     - 3.7
+c_compiler:
+    - vs2008
+    - vs2015
+    - vs2015
+    - vs2017
+cxx_compiler:
+    - vs2008
+    - vs2015
+    - vs2015
+    - vs2017
+zip_keys:
+    - python
+    - c_compiler
+    - cxx_compiler
