--- a/conda_build_config.yaml
+++ b/conda_build_config.yaml
@@ -4,16 +4,16 @@ python:
     - 3.6
     - 3.7
 c_compiler:
-    - vs2008
-    - vs2015
-    - vs2015
-    - vs2015
+    - vs2008 # [win]
+    - vs2015 # [win]
+    - vs2015 # [win]
+    - vs2015 # [win]
 cxx_compiler:
-    - vs2008
-    - vs2015
-    - vs2015
-    - vs2015
+    - vs2008 # [win]
+    - vs2015 # [win]
+    - vs2015 # [win]
+    - vs2015 # [win]
 zip_keys:
     - python
-    - c_compiler
-    - cxx_compiler
+    - c_compiler #[win]
+    - cxx_compiler #[win]
