renamed patch package on windows

--- a/bitshuffle/meta.yaml
+++ b/bitshuffle/meta.yaml
@@ -22,7 +22,7 @@ requirements:
         - {{ compiler('cxx') }}
         - setuptools
         - git
-        - patch
+        - m2-patch # [ win ]
 
 about:
     home: https://github.com/kiyo-masui/bitshuffle/blob/master/setup.py
