fix yaml file path

--- a/.github/workflows/conda_build.yml
+++ b/.github/workflows/conda_build.yml
@@ -44,7 +44,7 @@ jobs:
             sudo xcode-select -s "/Applications/Xcode_11.7.app"
             CONDA_BUILD_SYSROOT="$(xcode-select -p)/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk"
             [[ -e /opt/MacOSX10.9.sdk ]] || sudo ln -s ${CONDA_BUILD_SYSROOT} /opt/MacOSX10.9.sdk
-            printf "CONDA_BUILD_SYSROOT:\n    - ${CONDA_BUILD_SYSROOT}\n" >> conda-recipe/conda_build_config.yaml
+            printf "CONDA_BUILD_SYSROOT:\n    - ${CONDA_BUILD_SYSROOT}\n" >> conda_build_config.yaml
       - name: Setup docker
         if: runner.os == 'Linux'
         run: |
