backport patches to work on newer clang
see
https://github.com/epics-modules/pcas/commit/56403e8e4774dccc3819cab27bc975f48ab5f988

--- a/epics-base/meta.yaml
+++ b/epics-base/meta.yaml
@@ -12,6 +12,7 @@ source:
         - config_common.diff # [not win]
         - rules_build.diff # [not win]
         - config_readline.diff # [linux]
+        - cas.diff
 
 build:
   number: 3
