--- a/.github/workflows/conda_build.yml
+++ b/.github/workflows/conda_build.yml
@@ -51,8 +51,9 @@ jobs:
             ./start_docker.sh $(pwd)/packages
         env:
             MY_CONDA_CMD: "./conda_in_docker.sh"
-      - name: Build macOS
+      - name: Build
         run: |
+            printenv
             [[ -z "$MY_CONDA_TOKEN" ]] || ${MY_CONDA_CMD} config --set anaconda_upload yes
             [[ -n "$MY_CONDA_TOKEN" ]] || MY_CONDA_TOKEN=placeholder
             ${MY_CONDA_CMD} build -c $MY_CONDA_CHANNEL --token $MY_CONDA_TOKEN --skip-existing epics-base
