add compiler to requirements

--- a/conda_build_config.yaml
+++ b/conda_build_config.yaml
@@ -5,6 +5,13 @@ python:
     - 3.7
     - 3.8
     - 3.9
+numpy:
+    - 1.11
+    - 1.11
+    - 1.11
+    - 1.11
+    - 1.11
+    - 1.16
 c_compiler:
     - vs2008 # [win]
     - vs2015 # [win]
@@ -21,5 +28,6 @@ cxx_compiler:
     - vs2015 # [win]
 zip_keys:
     - python
+    - numpy
     - c_compiler #[win]
     - cxx_compiler #[win]
