--- a/lzf/meta.yaml
+++ b/lzf/meta.yaml
@@ -6,10 +6,16 @@ source:
     # path: ..
     git_rev: release-0.2.4
     git_url: https://github.com/teepark/python-lzf.git
+    patches:
+        - hotfix_issue5.diff
 
 requirements:
-    build:
-        - python
+    host:
+        - {{ compiler('c') }}
+        - {{ compiler('cxx') }}
+        - python {{ python }}
+        - setuptools
+
     run:
         - python
 
