--- a/pyepics/meta.yaml
+++ b/pyepics/meta.yaml
@@ -1,13 +1,23 @@
+{% set name = "pyepics" %}
+{% set version = "3.4.3" %}
+{% set hash_type = "sha256" %}
+{% set hash_value = "860de6a60b8420afb5f36216769d9e30bca91c501205cb3723529a8f9caed218" %}
+
 package:
-  name: pyepics
-  version: "3.2.4"
+  name: '{{ name|lower }}'
+  version: '{{ version }}'
 
 source:
-  git_rev: 3.2.4
-  git_url:  https://github.com/pyepics/pyepics.git
+  fn: '{{ name }}-{{ version }}.tar.gz'
+  url: https://pypi.io/packages/source/{{ name[0] }}/{{ name }}/{{ name }}-{{ version }}.tar.gz
+  '{{ hash_type }}': '{{ hash_value }}'
+
+build:
+  noarch: python
+  number: 0
 
 requirements:
-  build:
+  host:
     - python
     - setuptools
 
@@ -18,30 +28,13 @@ requirements:
     - epics-base
 
 test:
-  # Python imports
   imports:
     - epics
     - epics.autosave
     - epics.compat
     - epics.devices
 
-  # commands:
-    # You can put test commands to be run here.  Use this to test that the
-    # entry points work.
-
-
-  # You can also put a file called run_test.py in the recipe that will be run
-  # at test time.
-
-  # requires:
-    # Put any additional test requirements here.  For example
-    # - nose
-
 about:
   home: http://pyepics.github.io/pyepics/
   license: Epics Open License
   summary: 'Epics Channel Access for Python'
-
-# See
-# http://docs.continuum.io/conda/build.html for
-# more information about meta.yaml
